--- a/naive_bayes_2a.ipynb
+++ b/naive_bayes_2a.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -50,20 +50,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2036"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated. You should import from ipyparallel instead.\n",
+      "  \"You should import from ipyparallel instead.\", ShimWarning)\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-6f4732c313b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mqtid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mNameError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mqtid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlaunchConsole\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mqtid\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreturnPyIDs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-6f4732c313b9>\u001b[0m in \u001b[0;36mlaunchConsole\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mafter_pyids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreturnPyIDs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mnewid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mafter_pyids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbefore_pyids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewid\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -386,6 +396,14 @@
     "    # last two letters\n",
     "    if options['last_two']:\n",
     "        addFeature(G, rowNum, \"last_two\", name[-2:], trainingMode)\n",
+    "        \n",
+    "    # first four letters\n",
+    "    if options['first_two']:\n",
+    "        addFeature(G, rowNum, \"first_four\", name[0:3], trainingMode)\n",
+    "    \n",
+    "    # last three letters\n",
+    "    if options['last_two']:\n",
+    "        addFeature(G, rowNum, \"last_three\", name[-3:-1], trainingMode)\n",
     "    \n",
     "def returngen(G, nodeType):\n",
     "    # generator for nodes of type nodeType\n",
@@ -396,7 +414,9 @@
     "           'two_grams':    True,\n",
     "           'length':       True,\n",
     "           'first_two':    True,\n",
-    "           'last_two':     True}\n"
+    "           'last_two':     True,\n",
+    "           'first_four':   True,\n",
+    "           'last_three':   True}\n"
    ]
   },
   {
@@ -408,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -418,13 +438,27 @@
      "output_type": "stream",
      "text": [
       "<type 'numpy.ndarray'>\n",
-      "[[0 0 0 1 0 0 1 0 0 0 0 0 0 1 0 0]\n",
-      " [0 1 1 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 1 1 0 0 0 0 0 0 1 0 0 0]\n",
-      " [0 1 0 0 0 0 0 1 0 0 1 0 0 0 0 0]\n",
-      " [1 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 1]\n",
-      " [0 0 0 0 1 1 0 0 0 1 0 0 0 0 0 0]]\n",
+      "[[0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0\n",
+      "  1 1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 1 0 0 0]\n",
+      " [0 0 0 1 1 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 1 1 0\n",
+      "  0 0 1 0 0 0 1 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 1 1 1 0 1 1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  1 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 1 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 1 0 1 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 1 1 1 0\n",
+      "  0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 1 0 0 0 0 0 1 0 0 0 0\n",
+      "  0 0 0 1 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0\n",
+      "  0 1 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 0 1 1 0 0 1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 1 0 0 0 0 0 1\n",
+      "  0 0 0 0 0 0]\n",
+      " [0 1 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1\n",
+      "  0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 1 1 0 0 0 0\n",
+      "  0 0 0 1 0 1]]\n",
       "rows:\n",
       "    barthel\n",
       "    claudius\n",
@@ -435,21 +469,85 @@
       "    rollin\n",
       "columns:\n",
       "    last letter y\n",
-      "    length is 8\n",
+      "    contains li\n",
+      "    contains ll\n",
       "    last letter s\n",
+      "    contains la\n",
       "    last letter l\n",
       "    last letter n\n",
-      "    length is 6\n",
+      "    contains se\n",
+      "    contains da\n",
       "    length is 7\n",
       "    last letter d\n",
       "    length is 5\n",
+      "    contains di\n",
+      "    contains ta\n",
+      "    first two da\n",
+      "    contains st\n",
+      "    contains th\n",
+      "    last_three vi\n",
+      "    last_two us\n",
+      "    first_four bar\n",
+      "    contains es\n",
+      "    contains ss\n",
+      "    contains ey\n",
+      "    first two st\n",
       "    1st letter r\n",
       "    1st letter s\n",
       "    1st letter j\n",
       "    1st letter a\n",
       "    1st letter b\n",
       "    1st letter c\n",
-      "    1st letter d\n"
+      "    1st letter d\n",
+      "    contains el\n",
+      "    last_two ey\n",
+      "    first two cl\n",
+      "    contains ud\n",
+      "    contains us\n",
+      "    last_three li\n",
+      "    last_two el\n",
+      "    contains ba\n",
+      "    length is 8\n",
+      "    length is 6\n",
+      "    last_two rd\n",
+      "    first_four dav\n",
+      "    last_three iu\n",
+      "    contains je\n",
+      "    contains rt\n",
+      "    first_four sta\n",
+      "    last_three ar\n",
+      "    contains rd\n",
+      "    contains cl\n",
+      "    contains ro\n",
+      "    first_four jes\n",
+      "    first_four cla\n",
+      "    first two ah\n",
+      "    last_three ro\n",
+      "    contains ha\n",
+      "    contains he\n",
+      "    first_four aha\n",
+      "    contains ah\n",
+      "    contains au\n",
+      "    contains av\n",
+      "    contains ar\n",
+      "    last_three he\n",
+      "    contains iu\n",
+      "    last_three se\n",
+      "    last_two id\n",
+      "    contains in\n",
+      "    contains id\n",
+      "    last_two in\n",
+      "    first two ro\n",
+      "    contains af\n",
+      "    contains ff\n",
+      "    contains fa\n",
+      "    contains vi\n",
+      "    last_two on\n",
+      "    first two je\n",
+      "    first two ba\n",
+      "    first_four rol\n",
+      "    contains on\n",
+      "    contains ol\n"
      ]
     }
    ],
@@ -495,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -503,10 +601,10 @@
     {
      "data": {
       "text/plain": [
-       "0.8368375576036866"
+       "0.8597350230414746"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -564,10 +662,10 @@
     {
      "data": {
       "text/plain": [
-       "0.376"
+       "0.394"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -681,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -690,8 +788,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training accuracy was           0.837\n",
-      "and the the validation accuracy was 0.376\n"
+      "The training accuracy was           0.86\n",
+      "and the the validation accuracy was 0.394\n"
      ]
     }
    ],
@@ -709,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -737,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -765,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -793,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -821,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -830,8 +928,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training accuracy was           0.687\n",
-      "and the the validation accuracy was 0.546\n"
+      "The training accuracy was           0.777\n",
+      "and the the validation accuracy was 0.524\n"
      ]
     }
    ],
@@ -849,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -858,8 +956,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training accuracy was           0.801\n",
-      "and the the validation accuracy was 0.39\n"
+      "The training accuracy was           0.815\n",
+      "and the the validation accuracy was 0.468\n"
      ]
     }
    ],
@@ -884,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -913,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -942,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -971,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -991,6 +1089,36 @@
     "           'last_letter':  True,\n",
     "           'two_grams':    False,\n",
     "           'length':       True,\n",
+    "           'first_two':    False,\n",
+    "           'last_two':     False}\n",
+    "\n",
+    "ta, va = runNaiveBayes(train, validation, options)\n",
+    "printResults(options, ta, va)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The training accuracy was           0.778\n",
+      "and the the validation accuracy was 0.798\n"
+     ]
+    }
+   ],
+   "source": [
+    "options = {'first_letter': True,\n",
+    "           'last_letter':  True,\n",
+    "           'two_grams':    False,\n",
+    "           'length':       False,\n",
+    "           'first_four':   True,\n",
+    "           'last_three':   True,\n",
     "           'first_two':    False,\n",
     "           'last_two':     False}\n",
     "\n",
