added common feature sets from NB and DT

--- a/Project3_MaxEntropy.ipynb
+++ b/Project3_MaxEntropy.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -890,13 +890,262 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91\n",
+      "0.182\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('male', 'female', u'Mortie'),\n",
+       " ('male', 'female', u'Jeth'),\n",
+       " ('male', 'female', u'Bealle'),\n",
+       " ('male', 'female', u'Nickie'),\n",
+       " ('male', 'female', u'Glynn'),\n",
+       " ('male', 'female', u'Tonnie'),\n",
+       " ('male', 'female', u'Tymothy'),\n",
+       " ('male', 'female', u'Blayne'),\n",
+       " ('male', 'female', u'Lex'),\n",
+       " ('male', 'female', u'Gabriele'),\n",
+       " ('male', 'female', u'Dougie'),\n",
+       " ('male', 'female', u'Wye'),\n",
+       " ('male', 'female', u'Vite'),\n",
+       " ('male', 'female', u'Haley'),\n",
+       " ('male', 'female', u'Karl'),\n",
+       " ('male', 'female', u'Meryl'),\n",
+       " ('male', 'female', u'Alex'),\n",
+       " ('male', 'female', u'Tobie'),\n",
+       " ('male', 'female', u'Barnie'),\n",
+       " ('male', 'female', u'Iggie'),\n",
+       " ('male', 'female', u'Nevile'),\n",
+       " ('male', 'female', u'Witty'),\n",
+       " ('male', 'female', u'Sandy'),\n",
+       " ('male', 'female', u'Timothee'),\n",
+       " ('male', 'female', u'Garey'),\n",
+       " ('male', 'female', u'Bennie'),\n",
+       " ('male', 'female', u'Isaiah'),\n",
+       " ('male', 'female', u'Richie'),\n",
+       " ('male', 'female', u'Che'),\n",
+       " ('male', 'female', u'Wesley'),\n",
+       " ('male', 'female', u'Hari'),\n",
+       " ('male', 'female', u'Kingsly'),\n",
+       " ('male', 'female', u'Judith'),\n",
+       " ('male', 'female', u'Giovanne'),\n",
+       " ('male', 'female', u'Verge'),\n",
+       " ('male', 'female', u'Demetre'),\n",
+       " ('male', 'female', u'Rey'),\n",
+       " ('male', 'female', u'Prentice'),\n",
+       " ('male', 'female', u'Virgie'),\n",
+       " ('male', 'female', u'Tome'),\n",
+       " ('male', 'female', u'Parry'),\n",
+       " ('male', 'female', u'Gene'),\n",
+       " ('male', 'female', u'Quincey'),\n",
+       " ('male', 'female', u'Barde'),\n",
+       " ('male', 'female', u'Esau'),\n",
+       " ('male', 'female', u'Noble'),\n",
+       " ('male', 'female', u'Kane'),\n",
+       " ('male', 'female', u'Christy'),\n",
+       " ('male', 'female', u'Torrey'),\n",
+       " ('male', 'female', u'Yance'),\n",
+       " ('male', 'female', u'Sly'),\n",
+       " ('male', 'female', u'Tracie'),\n",
+       " ('male', 'female', u'Anatole'),\n",
+       " ('male', 'female', u'Vale'),\n",
+       " ('male', 'female', u'Willy'),\n",
+       " ('male', 'female', u'Keith'),\n",
+       " ('female', 'male', u'Shelby'),\n",
+       " ('female', 'male', u'Ester'),\n",
+       " ('female', 'male', u'Sharon'),\n",
+       " ('female', 'male', u'Friederike'),\n",
+       " ('female', 'male', u'Rosabel'),\n",
+       " ('female', 'male', u'Liz'),\n",
+       " ('female', 'male', u'Erin'),\n",
+       " ('female', 'male', u'Jonell'),\n",
+       " ('female', 'male', u'Karleen'),\n",
+       " ('female', 'male', u'Hildegaard'),\n",
+       " ('female', 'male', u'Kristel'),\n",
+       " ('female', 'male', u'Jess'),\n",
+       " ('female', 'male', u'Iris'),\n",
+       " ('female', 'male', u'Sherill'),\n",
+       " ('female', 'male', u'Gennifer'),\n",
+       " ('female', 'male', u'Suellen'),\n",
+       " ('female', 'male', u'Nicol'),\n",
+       " ('female', 'male', u'Velvet'),\n",
+       " ('female', 'male', u'Brooks'),\n",
+       " ('female', 'male', u'Dyan'),\n",
+       " ('female', 'male', u'Tatum'),\n",
+       " ('female', 'male', u'Cathleen'),\n",
+       " ('female', 'male', u'Nil'),\n",
+       " ('female', 'male', u'Millisent'),\n",
+       " ('female', 'male', u'Jewel'),\n",
+       " ('female', 'male', u'Theo'),\n",
+       " ('female', 'male', u'Bell'),\n",
+       " ('female', 'male', u'Haleigh'),\n",
+       " ('female', 'male', u'May'),\n",
+       " ('female', 'male', u'Doro'),\n",
+       " ('female', 'male', u'Brear'),\n",
+       " ('female', 'male', u'Rakel'),\n",
+       " ('female', 'male', u'Devin'),\n",
+       " ('female', 'male', u'Dallas'),\n",
+       " ('female', 'male', u'Mariel')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e3 = error_analysis(me3, validation)\n",
+    "print(len(e3))\n",
+    "print(1.0 * len(e3) / len(validation))\n",
+    "e3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:**  \n",
-    "* Try different featureset algorithm (common n-grams?)\n",
-    "* Adjust maxent classification parameters? (lower entropy threshold?)\n",
-    "* More evaluation statistics"
+    "**Feature Set 4: First and last letter only**  \n",
+    "*Note: this was one of the optimal Naive Bayes implementations*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ==> Training (10 iterations)\n",
+      "\n",
+      "      Iteration    Log Likelihood    Accuracy\n",
+      "      ---------------------------------------\n",
+      "             1          -0.69315        0.371\n",
+      "             2          -0.49096        0.768\n",
+      "             3          -0.42445        0.778\n",
+      "         Final          -0.39486        0.781\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gender_features4(word):\n",
+    "    return {'suffix1': word[-1:], 'prefix1': word[:1]}\n",
+    "\n",
+    "features4 = [(gender_features4(x), gender) for x, gender in train.values]\n",
+    "me4 = nltk.classify.maxent.MaxentClassifier.train(features4, \n",
+    "                                                  trace = 10, \n",
+    "                                                  max_iter = 10, \n",
+    "                                                  min_lldelta = 0.05, \n",
+    "                                                  algorithm = 'gis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.792\n",
+      "0.74\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_features4 = [(gender_features4(x), gender) for x, gender in validation.values]\n",
+    "print(nltk.classify.accuracy(me4, validation_features4))\n",
+    "test_features4 = [(gender_features4(x), gender) for x, gender in test.values]\n",
+    "print(nltk.classify.accuracy(me4, test_features4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Feature Set 5: Last letter, length of name, number of vowels**  \n",
+    "*Note: this was one of the optimal Decision Tree implementations*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ==> Training (10 iterations)\n",
+      "\n",
+      "      Iteration    Log Likelihood    Accuracy\n",
+      "      ---------------------------------------\n",
+      "             1          -0.69315        0.371\n",
+      "             2          -0.51806        0.722\n",
+      "             3          -0.45559        0.760\n",
+      "         Final          -0.42421        0.767\n"
+     ]
+    }
+   ],
+   "source": [
+    "def numVowels(word):\n",
+    "    vowels = ['a','e','i','o','u']\n",
+    "    return sum(word.count(v) for v in vowels)\n",
+    "    \n",
+    "    \n",
+    "def gender_features5(word):\n",
+    "    return {'length': len(word), 'suffix1': word[-1:], 'vowels': numVowels(word)}\n",
+    "\n",
+    "features5 = [(gender_features5(x), gender) for x, gender in train.values]\n",
+    "me5 = nltk.classify.maxent.MaxentClassifier.train(features5, \n",
+    "                                                  trace = 10, \n",
+    "                                                  max_iter = 10, \n",
+    "                                                  min_lldelta = 0.05, \n",
+    "                                                  algorithm = 'gis')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.78\n",
+      "0.746\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_features5 = [(gender_features5(x), gender) for x, gender in validation.values]\n",
+    "print(nltk.classify.accuracy(me5, validation_features5))\n",
+    "test_features5 = [(gender_features5(x), gender) for x, gender in test.values]\n",
+    "print(nltk.classify.accuracy(me5, test_features5))"
    ]
   }
  ],
