more changes from Tulasi

--- a/DecisionTreeT2.ipynb
+++ b/DecisionTreeT2.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -891,14 +891,18 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 145,
-     "metadata": {},
+     "execution_count": 1,
+     "metadata": {
+      "image/png": {
+       "width": 700
+      }
+     },
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='clfOneExample.png')"
+    "Image(filename='clfOneExample.png',width=700)"
    ]
   },
   {
