First and Last Letter

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 349,
    "metadata": {
     "collapsed": true
    },
@@ -46,6 +46,7 @@
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import preprocessing\n",
+    "from __future__ import division\n",
     "%matplotlib inline"
    ]
   },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 350,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 351,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 352,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 353,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 354,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 355,
    "metadata": {
     "collapsed": false
    },
@@ -274,42 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 371,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "clf = RandomForestClassifier(n_jobs=2, n_estimators=10, max_features=\"auto\",random_state=620)"
+    "clf = RandomForestClassifier(n_jobs=2, n_estimators=3, max_features=\"auto\",random_state=620)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def gender_features(word):\n",
-    "    word = word.lower()\n",
-    "    return {'suffix1': word[-1:], 'suffix2': word[:1],'Length':len(word)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "features = [(gender_features(x), gender) for x, gender in train.values]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 372,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 373,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 374,
    "metadata": {
     "collapsed": false
    },
@@ -346,18 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 375,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "third, thirdLE = createFactorDF([(len(word)) for word, gender in train.values])"
+    "#third, thirdLE = createFactorDF([(len(word)) for word, gender in train.values])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 376,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 377,
    "metadata": {
     "collapsed": false
    },
@@ -376,12 +353,12 @@
    "source": [
     "p= pd.DataFrame(first)\n",
     "p['second']=second\n",
-    "p['third']=third"
+    "#p['third']=third"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 378,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 379,
    "metadata": {
     "collapsed": false
    },
@@ -403,11 +380,11 @@
        "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
        "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=3, n_jobs=2,\n",
        "            oob_score=False, random_state=620, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 380,
    "metadata": {
     "collapsed": true
    },
@@ -426,16 +403,16 @@
    "source": [
     "first, firstLE = createFactorDF([(word[-1:]) for word, gender in validation.values])\n",
     "second, secondLE = createFactorDF([(word[1:]) for word, gender in validation.values])\n",
-    "third, thirdLE = createFactorDF([(len(word)) for word, gender in validation.values])\n",
+    "#third, thirdLE = createFactorDF([(len(word)) for word, gender in validation.values])\n",
     "Y, YLE = createFactorDF([(gender) for word, gender in validation.values])\n",
     "p2= pd.DataFrame(first)\n",
     "p2['second']=second\n",
-    "p2['third']=third"
+    "#p2['third']=third"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 381,
    "metadata": {
     "collapsed": false
    },
@@ -446,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 382,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 383,
    "metadata": {
     "collapsed": false
    },
@@ -482,8 +459,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>152</td>\n",
-       "      <td>163</td>\n",
+       "      <td>157</td>\n",
+       "      <td>158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -497,17 +474,40 @@
       "text/plain": [
        "preds     0    1\n",
        "actual          \n",
-       "0       152  163\n",
+       "0       157  158\n",
        "1        47  138"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.crosstab(p2['Y'], p2['pred_Y'], rownames=['actual'], colnames=['preds'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.59"
+      ]
+     },
+     "execution_count": 386,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = (157+138)/(157+158+47+138)\n",
+    "accuracy"
    ]
   },
   {
