--- a/DecisionTreeT2.ipynb
+++ b/DecisionTreeT2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +393,7 @@
        "0.718173963134"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -731,7 +731,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.classify import apply_features\n",
+    "from sklearn import tree\n",
+    "\n",
+    "# define some methods to use\n",
+    "\n",
+    "# get the last letter\n",
+    "def lastLetter(word):\n",
+    "    return (word[-1])\n",
+    "   \n",
+    "# assign and get numbers for words ending with a particular vowel\n",
+    "# binary/boolean is better for algorithms \n",
+    "def LastLetterVowel(word):\n",
+    "    if ( word[-1] == \"a\"):\n",
+    "        return 1;\n",
+    "    if ( word[-1] == \"e\"):\n",
+    "        return 2;\n",
+    "    if ( word[-1] == \"i\"):\n",
+    "        return 3;\n",
+    "    if ( word[-1] == \"o\"):\n",
+    "        return 3;\n",
+    "    if ( word[-1] == \"u\"):\n",
+    "        return 5;\n",
+    "    else:\n",
+    "        return 0;\n",
+    "\n",
+    "# assign and get 1 or 0 for the ending in vowel or not \n",
+    "def LastVowel(word):\n",
+    "    if ( word[-1] == \"a\"):\n",
+    "        return 1;\n",
+    "    if ( word[-1] == \"e\"):\n",
+    "        return 1;\n",
+    "    if ( word[-1] == \"i\"):\n",
+    "        return 1;\n",
+    "    if ( word[-1] == \"o\"):\n",
+    "        return 1;\n",
+    "    if ( word[-1] == \"u\"):\n",
+    "        return 1;\n",
+    "    else:\n",
+    "        return 0;\n",
+    "\n",
+    "# first letter of the word if k or not  \n",
+    "def firstLetterK(word):\n",
+    "    if ( word[1] == \"k\"):\n",
+    "        return 1;\n",
+    "    else:\n",
+    "        return 0;\n",
+    "\n",
+    "# return if sex is male or not\n",
+    "def MaleOrNot(sex):\n",
+    "    #print(gender)\n",
+    "    if (sex[0] == \"m\"):\n",
+    "        return True;\n",
+    "    else:\n",
+    "        return False;\n",
+    "\n",
+    "# return if sex is female or not\n",
+    "def FemaleOrNot(sex):\n",
+    "    #print(gender[0])\n",
+    "    if (sex[0] == \"f\"):\n",
+    "        return True;\n",
+    "    else:\n",
+    "        return False;\n",
+    "       \n",
+    "#return the name\n",
+    "def nameOnly(name):\n",
+    "    return name;\n",
+    "\n",
+    "# get name 'n sex from lists: maleNames and femaleNames\n",
+    "names = ([(name,'male') for name in maleNames] + [(name,'female') for name in femaleNames])\n",
+    "\n",
+    "# get names only from lists: maleNames and femaleNames\n",
+    "namesOnly = ([(name) for name in maleNames] + [(name) for name in femaleNames])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -740,74 +823,142 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicted values = \n",
-      "1\n",
-      "1\n"
+      "verify the name is still - orton\n",
+      "0    Orton\n",
+      "1        0\n",
+      "2        0\n",
+      "3        n\n",
+      "4        5\n",
+      "5     True\n",
+      "6    False\n",
+      "7     male\n",
+      "Name: 38, dtype: object\n",
+      "\n",
+      "6944\n",
+      "500\n",
+      "  LastLetter     sex\n",
+      "0          y    male\n",
+      "1          e  female\n",
+      "2          a  female\n",
+      "3          a  female\n",
+      "4          l  female\n",
+      "  LastLetter   sex\n",
+      "0          b  male\n",
+      "1          d  male\n",
+      "2          f  male\n",
+      "3          e  male\n",
+      "4          h  male\n",
+      "   lastVowel      M      F\n",
+      "0          0   True  False\n",
+      "1          2  False   True\n",
+      "2          1  False   True\n",
+      "3          1  False   True\n",
+      "4          0  False   True\n",
+      "   lastVowel     M      F\n",
+      "0          0  True  False\n",
+      "1          0  True  False\n",
+      "2          0  True  False\n",
+      "3          2  True  False\n",
+      "4          0  True  False\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "\n",
-    "## TRAIN set\n",
-    "# convert the training data already created above for use\n",
+    "# convert the training data already created above to a list for use\n",
     "trainList = train.values.tolist()\n",
     "\n",
     "# shutffle the list \n",
     "random.shuffle(trainList)\n",
     "\n",
-    "#print(len(trainList))\n",
-    "theNames = [(nameOnly(n),LastLetterVowelD(n),numOfVowels(n),firstLetterK(n),g) for (n,g) in trainList]\n",
+    "validationList = validation.values.tolist()\n",
+    "\n",
+    "#print(\"\\n Trainlist = ******\\n\")\n",
+    "#print(trainList)\n",
+    "\n",
+    "# create a 'test' list with all the necessary info\n",
+    "# the string values are now digits\n",
+    "theNames = [(nameOnly(n),LastLetterVowel(n),firstLetterK(n),lastLetter(n),len(n),MaleOrNot(g),FemaleOrNot(g),g) for (n,g) in trainList]\n",
+    "\n",
+    "# Now create a 'validation' list with all the necessary info\n",
+    "# the string values are now digits\n",
+    "theNamesVal = [(nameOnly(n),LastLetterVowel(n),firstLetterK(n),lastLetter(n),len(n),MaleOrNot(g),FemaleOrNot(g),g) for (n,g) in validationList]\n",
+    "\n",
     "# convert the test and the validation data to dataframe\n",
     "theNames_pd = pd.DataFrame(theNames)\n",
-    "theNames_pd = theNames_pd.rename(columns = {0:'nameOnly',1:'LastLetterVowelD',2:'numofVowelsD',\n",
-    "                                            3:'firstLetterK',4:'gender'})\n",
+    "theNames_pdVal = pd.DataFrame(theNamesVal)\n",
+    "\n",
+    "print \"verify the name is still - orton\"\n",
+    "print theNames_pdVal.loc[38, :]\n",
+    "print\n",
+    "\n",
+    "# rename the column names for test and validation dataframes\n",
+    "old_names = [0, 1, 2, 3, 4,5] \n",
+    "new_names = ['Name','LastVowel','FirstLetter','LastLetter','Length','M','F','Gender']\n",
+    "theNames_pd = theNames_pd.rename(columns = {0:'name',1:'lastVowel',2:'firstLetter',3:'LastLetter',\n",
+    "                                           4:'Length',5:'M',6:'F',7:'sex'})\n",
+    "theNames_pdVal = theNames_pdVal.rename(columns = {0:'name',1:'lastVowel',2:'firstLetter',3:'LastLetter',\n",
+    "                                           4:'Length',5:'M',6:'F',7:'sex'})\n",
+    "\n",
+    "print(len(theNames_pd))\n",
+    "print(len(theNames_pdVal))\n",
+    "\n",
+    "#select data \n",
+    "#df = theNames_pd.iloc[:,[1,5,6]]\n",
+    "#dfVal = theNames_pdVal.iloc[:,[1,5,6]]\n",
+    "#select data\n",
     "\n",
     "#LastVowel,isMale,isFemale\n",
-    "df = theNames_pd.iloc[:,[1,2,3]]\n",
-    "#print df.head()\n",
-    "X = df.values\n",
-    "y=df.numofVowelsD\n",
-    "\n",
-    "## VALIDAION set\n",
-    "# convert the training data already created above for use\n",
-    "validationList = validation.values.tolist()\n",
-    "#print(len(validationList))\n",
-    "\n",
-    "# shutffle the list \n",
-    "random.shuffle(validationList)\n",
-    "\n",
-    "theNames2 = [(nameOnly(n),LastLetterVowelD(n),numOfVowels(n),firstLetterK(n),g) for (n,g) in validationList]\n",
-    "# convert the test and the validation data to dataframe\n",
-    "theNames_pd2 = pd.DataFrame(theNames2)\n",
-    "theNames_pd2 = theNames_pd2.rename(columns = {0:'nameOnly',1:'LastLetterVowelD',2:'numofVowelsD',\n",
-    "                                            3:'firstLetterK',4:'gender'})\n",
-    "\n",
+    "df = theNames_pd.iloc[:,[1,5,6]]\n",
+    "#sex\n",
+    "dfGender = theNames_pd.iloc[:,[7]]\n",
     "#LastVowel,isMale,isFemale\n",
-    "df2 = theNames_pd2.iloc[:,[1,2,3]]\n",
-    "#print df2.head()\n",
-    "X2 = df2.values\n",
-    "y2=df2.numofVowelsD\n",
+    "dfVal = theNames_pdVal.iloc[:,[1,5,6]]\n",
+    "#sex\n",
+    "dfValGender = theNames_pdVal.iloc[:,[7]]\n",
+    "#LastLetter,sex\n",
+    "dfFeatureSet = theNames_pd.iloc[:,[3,7]]\n",
+    "#LastLetter,sex\n",
+    "dfFeatureSetVal = theNames_pdVal.iloc[:,[3,7]]\n",
+    "\n",
+    "print(dfFeatureSet.head())\n",
+    "print(dfFeatureSetVal.head())\n",
+    "print(df.head())\n",
+    "print(dfVal.head())\n",
     "\n",
     "\n",
-    "# classifier for Train data\n",
+    "# set the data to call fit from the DecisionTreeClassifier\n",
+    "#test\n",
+    "X = df.values.astype(np.float)\n",
+    "y = df.lastVowel.values\n",
+    "\n",
+    "#validation\n",
+    "XVal = dfVal.values.astype(np.float)\n",
+    "yVal = dfVal.lastVowel.values\n",
+    "\n",
+    "xFeature=dfFeatureSet.values.astype(np.str)\n",
+    "yFeatureSet=dfFeatureSet.LastLetter.values\n",
+    "\n",
+    "#print(\"yVal=\",yVal)\n",
+    "#from sklearn import cross_validation\n",
+    "#train_X, test_X, train_y, test_y = cross_validation.train_test_split(X, y) #%75 25%\n",
+    "\n",
+    "# classifier for test data\n",
     "clf = tree.DecisionTreeClassifier()\n",
     "clf = clf.fit(X,y)\n",
     "\n",
-    "# classifier for Validation data\n",
-    "clf2 = tree.DecisionTreeClassifier()\n",
-    "clf2 = clf2.fit(X2,y2)\n",
-    "#print(\"clf2=\" , clf2)\n",
-    "predicted_train_y=clf.predict(X)\n",
-    "predicted_val_y=clf.predict(X2)\n",
+    "# classifier for validation data\n",
+    "clfVal = tree.DecisionTreeClassifier()\n",
+    "clfVal = clfVal.fit(XVal,yVal)\n",
     "\n",
-    "print(\"predicted values = \")\n",
-    "#print(predicted_train_y)\n",
-    "#print(predicted_val_y)\n",
-    "print( 1 * sum(y == predicted_train_y)/len(y))\n",
-    "print( 1 * sum(y2 == predicted_val_y)/len(y2))\n",
-    "\n",
-    "\n"
+    "# not working\n",
+    "# Feature classifier\n",
+    "#from sklearn import preprocessing\n",
+    "#le = preprocessing.LabelEncoder()\n",
+    "#clfFeature = tree.DecisionTreeClassifier()\n",
+    "#clfFeature = le.fit(xFeature,yFeatureSet)\n",
+    "#clfFeature = le.fit(yFeatureSet)\n"
    ]
   },
   {
@@ -819,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -828,11 +979,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oct 25 18:16:56 tulasis-MBP.home dot[13376] <Error>: The function ‘CGFontGetGlyphPath’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
-      "Oct 25 18:16:56 tulasis-MBP.home dot[13376] <Error>: The function ‘CGFontGetGlyphPaths’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
+      "Oct 25 22:32:42 tulasis-MBP.home dot[16591] <Error>: The function ‘CGFontGetGlyphPath’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
+      "Oct 25 22:32:42 tulasis-MBP.home dot[16591] <Error>: The function ‘CGFontGetGlyphPaths’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
       "\n",
-      "Oct 25 18:16:57 tulasis-MBP.home dot[13377] <Error>: The function ‘CGFontGetGlyphPath’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
-      "Oct 25 18:16:57 tulasis-MBP.home dot[13377] <Error>: The function ‘CGFontGetGlyphPaths’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
+      "Oct 25 22:32:42 tulasis-MBP.home dot[16593] <Error>: The function ‘CGFontGetGlyphPath’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
+      "Oct 25 22:32:42 tulasis-MBP.home dot[16593] <Error>: The function ‘CGFontGetGlyphPaths’ is obsolete and will be removed in an upcoming update. Unfortunately, this application, or a library it uses, is using this obsolete function, and is thereby contributing to an overall degradation of system performance.\n",
       "\n"
      ]
     },
@@ -842,7 +993,7 @@
        "True"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,18 +1008,18 @@
     "dot_data = StringIO() \n",
     "tree.export_graphviz(clf, out_file=dot_data) \n",
     "graph = pydot.graph_from_dot_data(dot_data.getvalue()) \n",
-    "graph.write_pdf(\"clfGraph.pdf\") \n",
+    "graph.write_pdf(\"clfOneExample.pdf\") \n",
     "\n",
     "# tree for test data\n",
     "dot_data = StringIO() \n",
-    "tree.export_graphviz(clf2, out_file=dot_data) \n",
+    "tree.export_graphviz(clfVal, out_file=dot_data) \n",
     "graph = pydot.graph_from_dot_data(dot_data.getvalue()) \n",
     "graph.write_pdf(\"clf2Graph.pdf\") \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -879,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -891,18 +1042,14 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 1,
-     "metadata": {
-      "image/png": {
-       "width": 700
-      }
-     },
+     "execution_count": 20,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='clfOneExample.png',width=700)"
+    "Image(filename='clfOneExample.png')"
    ]
   },
   {
